# WhiteBeam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml
application/: Cargo.toml
application/src/: main.rs
application/src/common/: crypto.rs  db.rs  mod.rs
application/src/common/api/: mod.rs
application/src/common/hash/: mod.rs
application/src/common/hash/hashes/: sha3_512.rs
docs/: CREDITS.md  DESIGN.md  SECURITY.md
installer/: Cargo.toml
installer/src/: main.rs
installer/src/common/: db.rs  mod.rs
src/: lib.rs  main.rs
src/application/: Cargo.toml  main.rs  mod.rs
src/application/common/: crypto.rs  db.rs  hash.rs  http.rs  mod.rs
src/application/common/api/: db.rs  log.rs  mod.rs  service.rs  status.rs
src/application/common/hash/: mod.rs
src/application/common/hash/hashes/: argon2id.rs  sha3_256.rs  sha3_512.rs
src/extra/: init.sh
src/installer/: Cargo.toml  main.rs
src/installer/common/: db.rs
src/installer/common/resources/: default.sql  schema.sql
src/sql/common/: default.sql
