# General info
[package]
name = "whitebeam"
version = "0.0.5"
authors = ["noproto"]
edition = "2018"

# Build targets
[lib]
name = "whitebeam"
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = ["libraries"]

[[bin]]
name = "whitebeam"
path = "src/main.rs"
required-features = ["binaries"]

# Cross-platform dependencies
[dependencies]
hyper = { version = "0.12.33" }
serde = { version = "1.0.99", optional = true, features = ["derive"] }
hex = { version = "0.3.2", optional = true }
sha3 = { version = "0.8.2", optional = true }
clap = { version = "2.33.0", optional = true }
warp = { version = "0.1.19", optional = true }
rusqlite = { version = "0.20.0", optional = true, features = ["bundled"] }

[features]
libraries = ["hex", "sha3"]
binaries = ["clap", "warp", "rusqlite", "serde"]

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies.libc]
version = "0.2"
default-features = false
