# General info
[package]
name = "whitebeam"
version = "0.0.9"
authors = ["noproto"]
edition = "2018"

# Build targets
[lib]
name = "whitebeam"
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = ["libraries"]

[[bin]]
name = "whitebeam"
path = "src/main.rs"
required-features = ["binaries"]

# Cross-platform dependencies
[dependencies]
libc = { version = "0.2" }
sodiumoxide = { version = "0.2.5" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.44" }
rusqlite = { version = "0.20.0", features = ["bundled"] }
hex = { version = "0.4.0", optional = true }
sha3 = { version = "0.8.2", optional = true }
clap = { version = "2.33.0", optional = true }
warp = { version = "0.1.20", optional = true }
which = { version = "3.1.0", optional = true }

[features]
libraries = ["hex", "sha3", "which"]
whitelist_test = ["hex", "sha3", "which"]
binaries = ["clap", "warp"]

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies.kernel32-sys]
version = "0.2"
default-features = false
