# General info
[package]
name = "whitebeam"
version = "0.1.3"
authors = ["WhiteBeam Security, Inc."]
edition = "2018"

# Build targets
[[bin]]
name = "whitebeam"
path = "main.rs"

# Cross-platform dependencies
[dependencies]
libc = { version = "0.2" }
sodiumoxide = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rusqlite = { version = "0.21", features = ["bundled"] }
hex = { version = "0.4" }
clap = { version = "2.33" }
tokio = { version = "0.3", features = ["macros"] }
warp = { version = "0.2" }
rpassword = { version = "4.0" }
cli-table = { version = "0.3" }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies.kernel32-sys]
version = "0.2"
default-features = false
