# General info
[package]
name = "whitebeam"
version = "0.2.0"
authors = ["WhiteBeam Security, Inc."]
edition = "2018"

# Build targets
[[bin]]
name = "whitebeam"
path = "main.rs"

# Cross-platform dependencies
[dependencies]
libc = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rusqlite = { version = "0.25", features = ["bundled"] }
hex = { version = "0.4" }
clap = { version = "2.33" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = { version = "0.3" }
reqwest = { version = "0.11", features = ["blocking"] }
rpassword = { version = "5.0" }
cli-table = { version = "0.4" }
linkme = { version = "0.2" }
automod = { version = "1.0" }
rand = { version = "0.7" }
glob = { version = "0.3" }
goblin = { version = "0.4" }
# Cryptographic dependencies
sha3 = { version = "0.9" }
blake3 = { version = "0.3" }
argon2 = { version = "0.1" }
crypto_box = { version = "0.6" }

[features]
whitelist_test = []
