# General info
[package]
name = "whitebeam-installer"
version = "0.1.3"
authors = ["WhiteBeam Security, Inc."]
edition = "2018"

# Build targets
[[bin]]
name = "whitebeam-installer"
path = "main.rs"

# Cross-platform dependencies
[dependencies]
libc = { version = "0.2" }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies.kernel32-sys]
version = "0.2"
default-features = false
